codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_events_with_issues.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---

  Hooks
  Lifecycle hooks from config and enabled plugins.

  Issues
  ⚠ skipped invalid matcher for PreToolUse
  ■ /tmp/hooks.json: failed to parse hooks config

  Event                 Installed   Active      Description
  PreToolUse            0           0           Before a tool executes
  PermissionRequest     0           0           When permission is requested
  PostToolUse           0           0           After a tool executes
  PostToolUseFailure    0           0           After a tool fails
  PreCompact            0           0           Before context compaction
  SessionStart          0           0           When a new session starts
  SubagentStart         0           0           When a subagent starts
  SubagentStop          0           0           When a subagent stops
  Notification          0           0           When Codex sends a notification
  TaskCompleted         0           0           When a task completes
  UserPromptSubmit      0           0           When the user submits a prompt
  Stop                  0           0           Right before Codex ends its turn
  SessionEnd            0           0           When a session ends

  Press enter to view hooks; esc to close
